--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <p>Visit my <a href="https://www.linkedin.com/in/ali-amrahli-074616273/" target="_blank" >linkedin page</a> </p>
     <a href="public/contactMe.html" target="_blank">Contact me</a> <br>
-    <a href="public/education.html" target="_blank">Education</a>
-    
+    <a href="public/education.html" target="_blank">Education</a> <br>
+    <a href="public/qa.html" target="_blank">Questionaire</a>
   </body>
 </html>
