Styles updated. Css added

--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>My lovely page</title> 
+    <title>Home</title> 
     <link rel="icon" type="image/x-icon" href="/assets/icons/favicon.ico">
     <meta name="description" content="First page that I create">
     <meta charset="UTF8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/style.css">
   </head>
   <body>
     <table cellspacing ="20px">
       <tr>
-        <td><img src="assets/images/pp.png" alt="random img" height="200" width="200" style="border-radius: 50%;"> </td>
+        <td><img src="assets/images/pp.png" alt="random img" id="profile_picture" > </td>
         <td>
           <h2>Ali Amrahli</h2>
           <p style="font-size: large;"><b>Email: </b>ali.amrahli@gmail.com</p>
@@ -22,52 +25,9 @@
       </tr>
     </table>
 
-
-    <!-- <h1>Ali Amrahli</h1> -->
-    
-     
-    <hr>
-    <h3>My schedule</h3>
-    <table border="1" style="background-color:darkslategrey; color:antiquewhite; ">
-      <tr>
-        <th>Course</th>
-        <th>Time</th>
-      </tr>
-      <tr>
-        <td>WM1</td>
-        <td>Tue,Thu, 8:30-9:45</td>
-      </tr>
-      <tr>
-        <td>Distributed Systems</td>
-        <td>Wed,Fri 16:00</td>
-      </tr>
-      <tr>
-        <td>Data Engineering</td>
-        <td>Tue,Thu 13:00</td>
-      </tr>
-      <tr>
-        <td>Big Data Analytics</td>
-        <td>Tue,Thu 14:30</td>
-      </tr>
-    </table>
-    <hr>
-    <h3>Languages</h3>
-    <ul type="circle">
-      <li>Azerbaijan</li>
-      <li>English</li>
-      <li>Turkish</li>
-    </ul>
-    <hr>
-    <h3>Skills</h3>
-    <ul type="disc">
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>JS</li>
-      <li>PostgreSQL</li>
-    </ul>
     <hr>
 
-    <p>Visit my <a href="https://www.linkedin.com/in/ali-amrahli-074616273/" target="_blank" >linkedin page</a> </p>
+    <!-- <p>Visit my <a href="https://www.linkedin.com/in/ali-amrahli-074616273/" target="_blank" >Linkedin page</a> </p> -->
     <a href="public/contactMe.html" target="_blank">Contact me</a> <br>
     <a href="public/education.html" target="_blank">Education</a> <br>
     <a href="public/qa.html" target="_blank">Questionaire</a>
