--- a/public/education.html
+++ b/public/education.html
@@ -3,24 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Education</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
-    <h1 border-style="1px solid black">Education</h1>
-    <h3>School: </h3> <p>N.Narimanov middle school, Shamkir district</p>
-    <h3>University education: </h3> <p>ADA University</p>
-    <p>Computer Science</p>
+    <h1 style="text-align: center;">Education</h1>
+    <p class="uni_name">ADA University</p>
+    <p>Major: Computer Science</p>
     <p>CGPA: 3.22</p>
-    <ul>
+    <ul class="awards">
         <li>
-            <h4>Academic awards</h4>
+            <h4 style="display: inline-block;">Academic awards</h4>
                 <ul>
                     <li>Dean's List of Distinction in Fall 2021</li>
                     <li>Lotfi A. Zadeh List of Honor in Spring 2023</li>
                 </ul>
         </li>
     </ul>
-    <h4>Internship: </h4><span>Div Academy</span>
+    <hr>
+    <h3>Languages</h3>
+    <ol type="disk" style="margin-bottom: 30px;">
+      <li>Azerbaijan</li>
+      <li>English</li>
+      <li>Turkish</li>
+    </ol>
+    <hr>
+    <h3>Skills</h3>
+    <ul type="disc">
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JS</li>
+      <li>PostgreSQL</li>
+    </ul>
+    <hr>
+    <h4>Internship: </h4>
+    <ul type="disc">
+      <li>Div Academy</li>
+      <li>2 months</li>
+      <li>Back-end tutor assistant</li>
+    </ul>
+
+    <hr>
+    <h3>My schedule in Fall 2023</h3>
+    <table class="schedule">
+        <tr>
+          <th>Course</th>
+          <th>Time</th>
+        </tr>
+        <tr>
+          <td>WM1</td>
+          <td>Tue,Thu, 8:30-9:45</td>
+        </tr>
+        <tr>
+          <td>Distributed Systems</td>
+          <td>Wed,Fri 16:00</td>
+        </tr>
+        <tr>
+          <td>Data Engineering</td>
+          <td>Tue,Thu 13:00</td>
+        </tr>
+        <tr>
+          <td>Big Data Analytics</td>
+          <td>Tue,Thu 14:30</td>
+        </tr>
+      </table>
+    
     
     <hr>
 </body>
