--- a/public/contactMe.html
+++ b/public/contactMe.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact me</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
-    <h4>Fill this form to contact me:</h4>
+    <h1 style="text-align: center;">Contact me</h1>
     <form action="mailto:aamrahli12020@ada.edu.az" enctype="text/plain" method="POST">
         <fieldset>
         <label for="fname">First name:
@@ -33,10 +37,10 @@
             <input type="radio" name="gender" id="gender_other" value="OTHER"> Other
         </label><br> <br>
         <label for="subject">Subject:
-            <input type="text" name="subject" id="subject"> <br><br>
+            <input type="text" name="subject" id="subject" placeholder="Enter the subject"> <br><br>
         </label>
         <label for="message" ><p>Message:</p>
-            <textarea name="message" value="message" rows="10" cols="30">
+            <textarea name="message" value="message">
                 
             </textarea> <br><br>
         </label>
