Navigation bar added. Style updates

--- a/index.html
+++ b/index.html
@@ -10,26 +10,38 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
   </head>
+
+  
   <body>
-    <table cellspacing ="20px">
-      <tr>
-        <td><img src="assets/images/pp.png" alt="random img" id="profile_picture" > </td>
-        <td>
-          <h2>Ali Amrahli</h2>
-          <p style="font-size: large;"><b>Email: </b>ali.amrahli@gmail.com</p>
-          <p style="font-size: large;"><b>Phone: </b>+994505638291</p>
-          <p style="font-size: large;"><b>Address: </b>Asad Ahmadov 41</p>
-          <p style="font-size: large;"><b>Birthday date:</b> 27.06.2002</p> 
-          <p style="font-size: large;" > <b>Education:</b>  ADA University/Computer Science</p> 
-        </td>
-      </tr>
-    </table>
+    <nav>
+      <ul>
+        <li style="width: 70px;"; class="active"><a href="index.html">HOME</a></li>
+        <li><a href="public/education.html">EDUCATION</a></li>
+        <li><a href="public/qa.html">QUESTIONNAIRE</a></li>
+        <li>DIGITAL CARD</li>
+        <li>GITHUB ACCOUNT</li>
+        <li>GITHUB PAGE</li>
+        <li style="width: 70px;">ABOUT</li>
+        <li><a href="public/contactMe.html">CONTACT ME</a></li>
+      </ul>
+    </nav>
+    
+    <div>
+      <table cellspacing ="20px">
+        <tr>
+          <td><img src="assets/images/pp.png" alt="random img" id="profile_picture" > </td>
+          <td>
+            <h2>Ali Amrahli</h2>
+            <p style="font-size: large;"><b>Email: </b>ali.amrahli@gmail.com</p>
+            <p style="font-size: large;"><b>Phone: </b>+994505638291</p>
+            <p style="font-size: large;"><b>Address: </b>Asad Ahmadov 41</p>
+            <p style="font-size: large;"><b>Birthday date:</b> 27.06.2002</p> 
+            <p style="font-size: large;" > <b>Education:</b>  ADA University/Computer Science</p> 
+          </td>
+        </tr>
+      </table>
+    </div>
 
-    <hr>
-
-    <!-- <p>Visit my <a href="https://www.linkedin.com/in/ali-amrahli-074616273/" target="_blank" >Linkedin page</a> </p> -->
-    <a href="public/contactMe.html" target="_blank">Contact me</a> <br>
-    <a href="public/education.html" target="_blank">Education</a> <br>
-    <a href="public/qa.html" target="_blank">Questionaire</a>
+    
   </body>
 </html>
