--- a/public/contactMe.html
+++ b/public/contactMe.html
@@ -10,7 +10,20 @@
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
-    <h1 style="text-align: center;">Contact me</h1>
+    <nav>
+        <ul>
+          <li style="width: 70px;"><a href="../index.html">HOME</a></li>
+          <li><a href="education.html">EDUCATION</a></li>
+          <li><a href="qa.html">QUESTIONNAIRE</a></li>
+          <li>DIGITAL CARD</li>
+          <li><a href="https://github.com/aliamrahli" target="_blank">GITHUB ACCOUNT</a></li>
+          <li><a href="https://aliamrahli.github.io/personal-page-web1/">GITHUB PAGE</a></li>
+          <li style="width: 70px;">ABOUT</li>
+          <li class="active"><a href="contactMe.html">CONTACT ME</a></li>
+        </ul>
+      </nav>
+      <div>
+        <h1 style="text-align: center;">Contact me</h1>
     <form action="mailto:aamrahli12020@ada.edu.az" enctype="text/plain" method="POST">
         <fieldset>
         <label for="fname">First name:
@@ -50,5 +63,7 @@
         
         <a href="../index.html">Home</a>
     </form>
+      </div>
+    
 </body>
 </html>
