Digital card added. Style updates

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 
   
   <body>
+
     <nav>
       <ul>
         <li style="width: 70px;"; class="active"><a href="index.html">HOME</a></li>
         <li><a href="public/education.html">EDUCATION</a></li>
         <li><a href="public/qa.html">QUESTIONNAIRE</a></li>
-        <li>DIGITAL CARD</li>
-        <li>GITHUB ACCOUNT</li>
-        <li>GITHUB PAGE</li>
-        <li style="width: 70px;">ABOUT</li>
+        <li><a href="public/digital_card.html">DIGITAL CARD</a></li>
+        <li><a href="https://github.com/aliamrahli" target="_blank">GITHUB ACCOUNT</a></li>
+        <li><a href="https://aliamrahli.github.io/personal-page-web1/">GITHUB PAGE</a></li>
         <li><a href="public/contactMe.html">CONTACT ME</a></li>
       </ul>
     </nav>
