--- a/public/contactMe.html
+++ b/public/contactMe.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact me</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
@@ -15,10 +15,9 @@
           <li style="width: 70px;"><a href="../index.html">HOME</a></li>
           <li><a href="education.html">EDUCATION</a></li>
           <li><a href="qa.html">QUESTIONNAIRE</a></li>
-          <li>DIGITAL CARD</li>
+          <li><a href="digital_card.html">DIGITAL CARD</a></li>
           <li><a href="https://github.com/aliamrahli" target="_blank">GITHUB ACCOUNT</a></li>
           <li><a href="https://aliamrahli.github.io/personal-page-web1/">GITHUB PAGE</a></li>
-          <li style="width: 70px;">ABOUT</li>
           <li class="active"><a href="contactMe.html">CONTACT ME</a></li>
         </ul>
       </nav>
