Photo gallery added

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li style="width: 70px;"; class="active"><a href="index.html">HOME</a></li>
         <li><a href="public/education.html">EDUCATION</a></li>
         <li><a href="public/qa.html">QUESTIONNAIRE</a></li>
+        <li><a href="public/gallery.html">PHOTO GALLERY</a></li>
         <li><a href="public/digital_card.html">DIGITAL CARD</a></li>
         <li><a href="https://github.com/aliamrahli" target="_blank">GITHUB ACCOUNT</a></li>
         <li><a href="https://aliamrahli.github.io/personal-page-web1/">GITHUB PAGE</a></li>
