--- a/public/qa.html
+++ b/public/qa.html
@@ -15,6 +15,7 @@
           <li style="width: 70px;"><a href="../index.html">HOME</a></li>
           <li><a href="education.html">EDUCATION</a></li>
           <li class="active"><a href="qa.html" >QUESTIONNAIRE</a></li>
+          <li><a href="gallery.html">PHOTO GALLERY</a></li>
           <li><a href="digital_card.html">DIGITAL CARD</a></li>
           <li><a href="https://github.com/aliamrahli" target="_blank">GITHUB ACCOUNT</a></li>
           <li><a href="https://aliamrahli.github.io/personal-page-web1/">GITHUB PAGE</a></li>
